--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -49,7 +49,7 @@
                     <div class="col-lg-7">
                       <a href="candidate-view-profile.html">
                         <h5 class="text-capitalize">
-                          {{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}
+                          <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
                         </h5>
                       </a>
@@ -69,15 +69,15 @@
                     <img src="assets/images/user-img.jpg">
                     <div class="media-body">
                       <h6 class="text-capitalize">
-                        {{item?.city ? item?.city + ', ' : ''}}
-                        {{item?.state ? item?.state + ', ' : ''}}
-                        {{item?.country ? item?.country : ''}}
+                        {{item?.city ? item?.city : ''}}
+                        {{item?.state ? ', ' + item?.state : ''}}
+                        {{item?.country ? ', ' + item?.country : ''}}
                       </h6>
                       <h6>{{item?.experience ? 'Total Years Exp: ' + item?.experience : ''}}
                         <span *ngIf="item?.sap_experience">, {{item?.sap_experience ? 'SAP Exp: ' + item?.sap_experience : ''}}</span>
                       </h6>
                       <h6 *ngIf="item?.job_type">{{item?.job_type ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
-                      <h6 *ngIf="item?.availability">
+                      <h6 *ngIf="item?.availability || item?.availability == 0">
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
                       <div class="mt-2">
