--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -1,20 +1,10 @@
 <ng-template #registerReviewModal let-modal>
 	<div class="modal-header">
 		<h5 class="modal-title" id="exampleModalLabel">Profile Preview</h5>
-		<!-- <button type="button" (click)="onClickCloseBtn(false)" class="close" data-dismiss="modal" aria-label="Close">
-		  <span aria-hidden="true">&times;</span>
-		</button> -->
     </div>
     <div class="modal-body" style="height:550px; overflow-x:hidden; overflow-y:scroll;">
 		<div class="row">
 			<div class="col-lg-12">
-			  <!-- <app-contact-card
-				[userInfo]="userInfo"
-				[isEdit]="false"
-				[isContactIcon]="false"
-				[isResume]="true"
-				>
-				</app-contact-card> -->
 				<div class="card job-card">
 					<div class="card-body">
 						<div class="row">
@@ -74,160 +64,159 @@
 					</div>
 				</div>
 			</div>
-		</div><div class="row mt-3 info-box">
-	<div class="col-lg-12">
-		<div class="pj-title mb-3">
-			 <h6>{{"dashboard.personalDetails" | translate }}</h6>
 		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.nationality" | translate }}</li>
-				</ul>
+		<div class="row mt-3 info-box">
+			<div class="col-lg-12">
+				<div class="pj-title mb-3">
+					 <h6>{{"dashboard.personalDetails" | translate }}</h6>
+				</div>
 			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{this.findCountry(childForm?.value?.personalDetails?.nationality)}}</li>
-				</ul>
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.nationality" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group">
+							<li class="list-group-item text-capitalize">{{this.findCountry(childForm?.value?.personalDetails?.nationality)}}</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.relocation" | translate }}</li>
-				</ul>
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.relocation" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group">
+							<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">
-					{{"dashboard.education" | translate }}
-				</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group ul-value">
-				{{this.findEducation(childForm?.value?.educationExp?.education_qualification)}}
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.jobType" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group ul-value">
-					{{(childForm?.value?.jobPref?.job_type || childForm?.value?.jobPref?.job_type == 0) ? sharedService.onGetJobType(childForm?.value?.jobPref?.job_type) : '--'}}
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.availability" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{childForm?.value?.jobPref?.availability == 0 ? 'Immediate' : childForm?.value?.jobPref?.availability + ' Days'}}</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="col-lg-6" >
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.workAuthorisation" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group ul-value">
-					<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
-						 {{"postYourResume.iHaveWorkAuthorization" | translate }}
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">
+							{{"dashboard.education" | translate }}
 						</li>
-						<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 1 ">
-						 {{"postYourResume.iNeedVisaAponsorship" | translate }}
-						</li>
-				</ul>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group ul-value">
+						{{this.findEducation(childForm?.value?.educationExp?.education_qualification)}}
+						</ul>
+					</div>
+				</div>
 			</div>
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.jobType" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group ul-value">
+							{{(childForm?.value?.jobPref?.job_type || childForm?.value?.jobPref?.job_type == 0) ? sharedService.onGetJobType(childForm?.value?.jobPref?.job_type) : '--'}}
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.availability" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group">
+							<li class="list-group-item text-capitalize">{{childForm?.value?.jobPref?.availability == 0 ? 'Immediate' : childForm?.value?.jobPref?.availability + ' Days'}}</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6" >
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.workAuthorisation" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group ul-value">
+							<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
+								 {{"postYourResume.iHaveWorkAuthorization" | translate }}
+								</li>
+								<li class="list-group-item" *ngIf="childForm?.value?.personalDetails?.work_authorization == 1 ">
+								 {{"postYourResume.iNeedVisaAponsorship" | translate }}
+								</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"postJob.travel" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group">
+							<li class="list-group-item text-capitalize">{{childForm?.value?.jobPref?.travel == 0 ? 'No' : childForm?.value?.jobPref?.travel + '%'}}</li>
+						</ul>
+					</div>
+				</div>
+			</div>	
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"postJob.remote" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group">
+							<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(childForm?.value?.jobPref?.remote_only)}}</li>
+						</ul>
+					</div>
+				</div>
+			</div>	
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.workAuthorisationIn" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info ul-value">
+						{{this.findCountryArray(childForm?.value?.personalDetails?.authorized_country)}}				
+					</div>
+				</div>
+			</div>	
+			<div class="col-lg-6">
+				<div class="row">
+					<div class="col-lg-6 caption">
+						<ul class="list-group">
+							<li class="list-group-item">{{"dashboard.preferredLocation" | translate }}</li>
+						</ul>
+					</div>
+					<div class="col-lg-6 info">
+						<ul class="list-group ul-value">
+						{{findCountryArray(childForm?.value?.jobPref?.preferred_countries)}}
+						</ul>
+					</div>
+				</div>
+			</div>	
 		</div>
-	</div>
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"postJob.travel" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{childForm?.value?.jobPref?.travel == 0 ? 'No' : childForm?.value?.jobPref?.travel + '%'}}</li>
-				</ul>
-			</div>
-		</div>
-	</div>	
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"postJob.remote" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group">
-					<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(childForm?.value?.jobPref?.remote_only)}}</li>
-				</ul>
-			</div>
-		</div>
-	</div>	
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.workAuthorisationIn" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info ul-value">
-				{{this.findCountryArray(childForm?.value?.personalDetails?.authorized_country)}}				
-			</div>
-		</div>
-	</div>	
-	<div class="col-lg-6">
-		<div class="row">
-			<div class="col-lg-6 caption">
-				<ul class="list-group">
-					<li class="list-group-item">{{"dashboard.preferredLocation" | translate }}</li>
-				</ul>
-			</div>
-			<div class="col-lg-6 info">
-				<ul class="list-group ul-value">
-				{{findCountryArray(childForm?.value?.jobPref?.preferred_countries)}}
-				</ul>
-			</div>
-		</div>
-	</div>	
-		
-</div>
-		
 		<div class="row mt-3 info-box">
 			<div class="col-lg-12">
 				<div class="pj-title mb-3">
@@ -284,18 +273,18 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-					<li class="list-group-item text-uppercase d-flex handsExp">
-						<ng-container *ngIf="childForm?.value?.skillSet?.hands_on_experience?.length; else elseHandsTemplate">
-							<ng-container *ngFor="let item of childForm?.value?.skillSet?.hands_on_experience; let i = index" >
-								<div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2">
-									{{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
-								</div>
+						<li class="list-group-item text-uppercase d-flex handsExp">
+							<ng-container *ngIf="childForm?.value?.skillSet?.hands_on_experience?.length; else elseHandsTemplate">
+								<ng-container *ngFor="let item of childForm?.value?.skillSet?.hands_on_experience; let i = index" >
+									<div [ngClass]="{'pl-2': i >= 1}" class="text-center border-right pr-2">
+										{{item?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag) : '--'}} <br>({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
+									</div>
+								</ng-container>
 							</ng-container>
-						</ng-container>
-						<ng-template #elseHandsTemplate>
-							<p>--</p>
-						</ng-template>
-					</li>
+							<ng-template #elseHandsTemplate>
+								<p>--</p>
+							</ng-template>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -374,20 +363,18 @@
 					 <h6>{{"postJob.certification" | translate }}</h6>
 				</div>
 			</div>
-
 			<div class="col-lg-12" *ngIf="childForm.value.skillSet.certification">
 				<div class="media mb-2" *ngFor="let certification of childForm.value.skillSet.certification">
 					<img src="assets/images/certifications-icon.png" width="26px" class="mr-2" alt="SAP">
 					<div class="media-body">
 						<p class="my-1 h5" >{{certification}} </p>
-					 </div>
+					</div>
 				</div>
 			</div>
-			
 		</div>
 		
 		<div class="row mt-3 info-box" *ngIf="childForm?.value?.personalDetails?.reference">	
-				
+						
 			<div class="col-lg-12"  *ngIf="childForm?.value?.personalDetails?.reference?.length !=0">
 				<div class="pj-title mb-3 border-primary" *ngIf="childForm?.value?.personalDetails?.reference[0].name && childForm?.value?.personalDetails?.reference[0].email && childForm?.value?.personalDetails?.reference[0].company_name">
 					<h6 class="text-blue" role="button" (click)="show = !show"> Reference  <i class="fas fa-angle-down"></i></h6>
