--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -5,8 +5,9 @@
         <div class="matching-post">
           <div *ngFor="let item of postedJobs; let i = index" class="custom-control custom-radio mb-2" data-toggle="collapse" href="#collapseFollowup" role="button" aria-expanded="false" aria-controls="collapseFollowup">
             <input (change)="onSetJob(item)" class="custom-control-input  mb-0" type="radio" id="Check_{{i}}" name="example1_{{selectedJob?.id}}_{{item?.id}}" [checked]="(selectedJob?.id == item?.id)">
-            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} </label>
-          </div>
+            <label class="text-capitalize custom-control-label mb-0" for="Check_{{i}}">{{item?.title}} ({{ checkDataCount(item?.id)}}) </label>
+			<!--  {{ selectedJob?.id == item?.id ? (appliedJobMeta?.total ?  '(' + appliedJobMeta?.total + ')' :  '(' +0+ ')') : ''}} -->
+			</div>
         </div>
       </div>
     </div>
