--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -41,10 +41,10 @@
                 <td class="text-capitalize">
 					<ng-container *ngIf="item?.job_locations">
                   {{item?.job_locations[0].city ? item?.job_locations[0].city + ', ' : ''}}
-                  {{item?.job_locations[0].state ? item?.job_locations[0].state + ', ' : ''}}
-                  <span class="text-uppercase">
+                  {{item?.job_locations[0].stateshort ? item?.job_locations[0].stateshort + ' ' : ''}}
+                 <!--  <span class="text-uppercase">
                     {{item?.job_locations[0].country ? item?.job_locations[0].country : ''}}
-                  </span>
+                  </span> -->
 				  <span class="text-uppercase" style="color:blue;cursor:pointer;" *ngIf="item?.job_locations?.length-1 !=0">
                     +{{item?.job_locations?.length-1}}
                   </span>
