--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-layout/create-candidate-layout.component.html
@@ -14,6 +14,9 @@
 <!-- //Sub Header Section -->
 <section class="my-4">
   <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
+	<h5 style="font-weight:bold;display:none;" id="titleView" > {{"postJob.title" | translate }} </h5><br />
+	<h6 style="display:none;" id="titleContent">{{"postJob.content" | translate }}  <br /> {{"postJob.contentSubject" | translate }}  </h6><br />
+
     <div class="row">
       <div class="col-lg-12 tabs-animated" id="myTab">
         <form method="post" #candidateNgForm="ngForm" [formGroup]="candidateForm">
