--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -4,7 +4,7 @@
       <div class="col-lg-5 col-md-5 col-sm-5 d-flex align-items-center">
        
         <ol class="breadcrumb">
-		  <li class="breadcrumb-item"><a (click)="onRedirectBack();" ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
+		  <li class="breadcrumb-item"><a (click)="onRedirectBack();" style="cursor:pointer;" ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
           <li class="breadcrumb-item active" aria-current="page">
             {{"home.postJob" | translate}}
             <!-- {{"dashboard.postJobDetailView" | translate}} -->
