--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -104,7 +104,15 @@
 		</div>
 	</div>
 	<div *ngIf="currentTabInfo.tabNumber == 3  ">
-		<div *ngIf="isShowCalenderForm == true && isFormDataShow == false">
+		<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)"  [currentView]='currentView' [eventSettings]='eventSettings'>
+			<e-views>   
+				<e-view option='Day' [readonly]="isReadOnly"></e-view>
+				<e-view option='Week' [readonly]="isReadOnly"></e-view>
+				<e-view option='Month' [readonly]="isReadOnly"></e-view>
+				<e-view option='Agenda' [readonly]="isReadOnly"></e-view>
+			</e-views>
+		</ejs-schedule>
+		<!-- <div *ngIf="isShowCalenderForm == true && isFormDataShow == false">
 		  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfoCalendar()">
 			<div class="container">
 				<div class="row mt-2">
@@ -185,7 +193,7 @@
 				<i class="fas fa-eye" style="font-size: 23px;color:#2cd4fe;cursor:pointer;" (click)="openCalenderView(ticket.value)"></i> 
 			</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
   </div>
 </section>
