--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
@@ -1,4 +1,16 @@
+.customcheck {
+float: left;
+margin-right: 10px;
+}
 
+.error {
+background-color: #FF8A8A;
+}
+
+#custom table td {
+padding:5px;
+}
+	
 .animated-button1 {
   background: linear-gradient(-30deg, #32d2fd 50%, #2485c3 50%);
   padding: 20px 20px;
