--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -104,96 +104,15 @@
 		</div>
 	</div>
 	<div *ngIf="currentTabInfo.tabNumber == 3  ">
-		<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)"  [currentView]='currentView' [eventSettings]='eventSettings'>
+		<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)" (popupOpen)='onPopupOpen($event)'  (actionBegin)="onSaveClick($event)" [currentView]='currentView' [eventSettings]='eventSettings'>
 			<e-views>   
-				<e-view option='Day' [readonly]="isReadOnly"></e-view>
-				<e-view option='Week' [readonly]="isReadOnly"></e-view>
-				<e-view option='Month' [readonly]="isReadOnly"></e-view>
+				<e-view option='Day' readonly="true"></e-view>
+				<e-view option='Week' readonly="true"></e-view>
+				<e-view option='Month' readonly="true"></e-view>
 				<e-view option='Agenda' [readonly]="isReadOnly"></e-view>
 			</e-views>
 		</ejs-schedule>
-		<!-- <div *ngIf="isShowCalenderForm == true && isFormDataShow == false">
-		  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfoCalendar()">
-			<div class="container">
-				<div class="row mt-2">
-					<div class="col-lg-12 col-md-6">
-						<label class="font-weight-bold">{{"common.calenders" | translate}} </label>
-						<div ></div>
-					</div>
-				</div>
-				<div class="row mt-2" *ngFor="let ticket of c.controls; let i = index; let last = last">
-					<ng-container [formGroup]="ticket">
-						<div class="col-lg-4 col-md-4">
-							<input formControlName="title"  class="form-control mt-4" type="text" placeholder="Enter the Calender title">
-							<app-control-messages [control]="ticket['controls']['title']"></app-control-messages>
-						</div><div class="col-lg-5 col-md-4">
-							<input formControlName="url" class="form-control mt-4" type="text" placeholder="Enter the Calender link">
-							<app-control-messages [control]="ticket['controls']['url']"></app-control-messages>
-						</div>
-						<div class="col-lg-2 col-md-4" style="top: 25px;">
-							<button type="button" class="btn btn-outline-danger"
-								style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveCalender(i)"><i class="fas fa-times"></i></button>
-							<button *ngIf="last" (click)="onDuplicateCalender(i)" type="button" class="btn btn-outline-green ml-2"
-								style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
-						</div>
-					</ng-container>
-				</div>
-			  </div>
-			  
-			  <div class="row mt-5">
-				<div class="col-lg-4 col-md-6">
-				  <div class="form-group">
-					<button type="button"  class="btn btn-secondary btn-block btn-lg" (click)="cancelCalender()">{{"shared.cancel" | translate }}</button>
-				  </div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-				  <div class="form-group">
-					<button [disabled]="(!checkStatusCalendar() && !invalidMobile ) " type="submit" class="btn btn-theme-blue btn-block btn-lg">{{"shared.submit" | translate }}</button>
-				  </div>
-				</div>
-			  </div>
-		  </form>
-		</div>
-		<div *ngIf="isShowCalenderForm == false && isFormDataShow == false">
-			<div class="row ">
-			<div class="col-lg-6 col-md-12">
-			<img src="assets/images/calender.png" class="img-fluid mx-auto"/>
-			</div>
-			<div class="col-lg-6 col-md-12" style="align-self: center;"  >
-				<a  (click)="enableaddCalender()" class="animated-button1 blue-animation" style="cursor:pointer;">
-				  <span></span>
-				  <span></span>
-				  <span></span>
-				  <span></span>
-				  {{"common.addCalender" | translate}}
-				</a>
-			</div>
-			</div>
-		</div>
-		<div *ngIf="isFormDataShow == true">
-			<div class="row ">
-				<div class="col-lg-6 col-md-12">
-				</div>
-				<div class="col-lg-6 col-md-12" style="align-self: center;"  >
-					<a  (click)="enableaddCalender()" class="animated-button1 blue-animation" style="cursor:pointer;padding: 11px;    border-radius: 10px;">
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					  {{"common.addCalenders" | translate}}
-					</a>
-				</div>
-				
-			</div>
-			<div class="row " *ngFor="let ticket of c.controls;">
-				<div class="col-lg-3 col-md-3" style="font-size: 25px;margin:8px 0rem;" *ngIf="ticket.value.title">
-				<i class="fas fa-calendar-alt"  style="color: #23a8f9;"></i> <a style="margin-left:1rem;">{{ticket.value.title}}</a>
-			</div>
-			<div class="col-lg-1 col-md-1" style="font-size: 31px;margin:2px 0rem;" *ngIf="ticket.value.title" >
-				<i class="fas fa-eye" style="font-size: 23px;color:#2cd4fe;cursor:pointer;" (click)="openCalenderView(ticket.value)"></i> 
-			</div>
-			</div>
-		</div> -->
+		
 	</div>
   </div>
 </section>
@@ -210,36 +129,4 @@
 			</div>
 		</div>
 	</div>
-</ng-template>
-<ng-template #openCalender let-modal >
-	<div class="modal-header">
-		<button type="button"  (click)="closeCalender()" class="close" data-dismiss="modal" aria-label="Close">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	<div class="modal-content">
-		<div class="modal-body text-center ">
-		<div class="row ">
-				<div class="col-lg-6 col-md-12">
-				</div>
-				<div class="col-lg-6 col-md-12" style="text-align: end;"  >
-					<a  (click)="refresh()" class="animated-button1 blue-animation" style="cursor:pointer;padding: 11px;    border-radius: 10px;">
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					  <span></span>
-					   <i class="fas fa-sync "></i>
-					  {{"common.refresh" | translate}}
-					</a>
-				</div>
-			</div>
-			<iframe width="100%" frameBorder="0" height="100%"  style="min-width:320px;height:580px;border:0;" [src]="url"></iframe>
-
-		</div>
-		<div class="modal-footer">
-			<div class=" mx-auto">
-				<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeCalender()"  data-dismiss="modal">{{"shared.ok" | translate}}</button>
-			</div>
-		</div>
-	</div>	
 </ng-template>
