--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.css
@@ -154,3 +154,19 @@ padding:5px;
 	 background: -webkit-gradient(linear, left top, left bottom, from(rgba(43, 8, 8, 0)), to(#0098f9)) !important;
 	    background: linear-gradient(to left, rgba(43, 8, 8, 0), #0098f9) !important;
 }
+
+:host /deep/ .e-day-wrapper .e-subject{
+	margin-top : -3px;
+}
+:host /deep/ .e-day-wrapper .e-appointment{
+	width:100% !important;
+}
+:host /deep/ .e-month-view .e-appointment{
+	width:157px !important;
+}:host /deep/ .e-schedule .e-agenda-view .e-appointment{
+	    height: 3rem;
+}:host /deep/ .e-agen{
+	position: relative;
+    top: -2rem;
+    left: 69%;
+}
